// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// Proto representation of the internal ReportResult entity type.
// Open questions:
// What do we want the internal API to look like? Arguably we
// Use cases:
// 1) set noisy results
// 2) get noisy results
// 3) set denoised results
// 4) no need for get denoised results since BasicReport.Get will expose them
message ReportResult {
  // `MeasurementConsumer` ID from the CMMS public API.
  int64 cmms_measurement_consumer_id = 1;
  int64 report_result_id = 2;

  enum MetricFrequencyType {
    METRIC_FREQUENCY_TYPE_UNSPECIFIED = 0;
    TOTAL = 1;
    WEEKLY = 2;
  }

  enum VennDiagramRegionType {
    VENN_DIAGRAM_REGION_TYPE_UNSPECIFIED = 0;
    // Indicates that the metrics for a ReportingSet are for the
    // union of the entailed ReportingSets
    UNION = 1;
    // Indicates that the metrics for a ReportingSet are for the
    // primitive Venn diagram region entailed by sub-ReportingSets
    PRIMITIVE = 2;
  }
}

